* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Update concat version in metadata.json

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Confine puppet version in metadata.json

* Tue Jan 10 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated pki scheme
- Application certs now managed in /etc/pki/simp_apps/autofs/x509

* Mon Jan 02 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Ripped out all NFS materials
- NFS can now work with the configuration of autofs but there should not have
  been a strong dependency the other way

* Thu Dec 08 2016 Nick Markowski <nmarkowswki@keywcorp.com> - 6.0.0-0
- Updated global catalysts
- Strong typed
- Changed empty string defaults to undef

* Thu Dec 02 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
- Removed pupmod-simp-sysctl in favor of augeas-sysctl

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Tue Oct 18 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Tue Oct 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.3-0
- Fixed an issue where the filenames used by 'concat' could contain '/' which
  made them unfit for system use.
- Also added 'audit' options to the file resources that control the 'autofs'
  service restarts.

* Tue Aug 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.2-0
- Fixed dependency cycle between autofs and stunnel with an ugly exec.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Fixed template variable reference typos

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-8
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-7
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-6